--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@as-integrations/fastify": "^2.1.1",
     "@fastify/static": "^7.0.4",
     "@nestjs/apollo": "^12.1.0",
+    "@nestjs/axios": "^3.1.3",
     "@nestjs/common": "^10.3.8",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.3.8",
@@ -37,6 +38,7 @@
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.2",
+    "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "concurrently": "^8.2.2",
