feat: add redis caching

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
+PORT=
+
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=postgres
+
+CACHE_DEFAULT_TTL=86400
+REDIS_HOST= localhost
+REDIS_PORT=6379
+REDIS_DEFAULT_DB=1
+REDIS_PASSWORD=''
