--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fastify/static": "^7.0.4",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/axios": "^3.1.3",
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.3.8",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.3.8",
@@ -39,6 +40,7 @@
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.2",
     "axios": "^1.7.9",
+    "cache-manager-redis-yet": "^5.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "concurrently": "^8.2.2",
