--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,19 @@ services:
     networks:
       - integration_tests_network
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: integration_tests_pgadmin
+    ports:
+      - '5050:80'
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    depends_on:
+      - postgres
+    networks:
+      - integration_tests_network
+
 volumes:
   redis_data:
   postgres_data:
