--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "test:e2e": "cross-env NODE_ENV=test jest --config ./jest-e2e.config.ts --runInBand",
     "test:e2e:watch": "npm run test:e2e -- --watch",
     "typeorm": "ts-node -r tsconfig-paths/register -r dotenv/config ./node_modules/.bin/typeorm -d src/database/datasource.ts",
-    "repl": " TZ=UTC nest start --entryFile repl --watch"
+    "repl": " TZ=UTC nest start --entryFile repl --watch",
+    "migration:generate": "npx typeorm-ts-node-commonjs migration:generate ./src/database/migrations/schema-update -d src/database/datasource.ts",
+    "migration:show": "npx typeorm-ts-node-commonjs migration:show -d src/database/datasource.ts",
+    "migration:run": "npx typeorm-ts-node-commonjs migration:run -d  src/database/datasource.ts",
+    "migration:revert": "npx typeorm-ts-node-commonjs migration:revert -d src/database/datasource.ts"
   },
   "dependencies": {
     "@apollo/server": "^4.10.4",
