--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.3.8",
     "@nestjs/graphql": "^12.1.1",
+    "@nestjs/platform-express": "^10.4.13",
     "@nestjs/platform-fastify": "^10.3.8",
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.4.2",
